Fix a CSS problem. Sometimes the tags overlapped  the question's body.

--- a/skins/majibu/media/style/style.css
+++ b/skins/majibu/media/style/style.css
@@ -725,6 +725,7 @@ a.medal:hover {
     font-size: 13px;
     line-height: 20px;
     min-height: 100px;
+    padding-bottom: 5px;
 }
 
 .question-body img {
